@@ -8,6 +8,8 @@ The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog] an
 
 === Added ===
 
+* The `ResultExt::with_context` function. (#3)
+
 === Changed ===
 
 * The context functions and `Error` type are now generic over `ToString` instead of `IntoString`.
